--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SopaDeLetras"
         tools:targetApi="31">
+
         <activity
             android:name=".StartActivity"
             android:exported="true">
@@ -22,6 +24,7 @@
         </activity>
         <activity android:name=".MainActivity"/>
         <activity android:name=".VictoryActivity"/>
+        <activity android:name=".PrivacyPolicyActivity"/>
     </application>
 
 </manifest>
